- wallet: fix travis errors, сhecked and fixed everything on mobile and tablet

--- a/shared/components/tables/Table/Table.scss
+++ b/shared/components/tables/Table/Table.scss
@@ -2,7 +2,7 @@
   border-collapse: collapse;
   border: 0;
   width: auto;
-  
+
   margin-bottom: 20px;
   thead {
     box-shadow: rgba(#000 ,0.03) 0 3px 3px 0;
@@ -266,9 +266,9 @@ table.wallet {
   }
 
   table.wallet {
-    td:nth-child(1) {
-      width: 5%;
-    }
+    // td:nth-child(1) {
+    //   width: 5%;
+    // }
     td:nth-child(2) {
       width: 12%;
     }
